# ogls

./: LICENSE  README.md  build  ogls.cabal  stack.yaml
app/: Main.hs
data/shaders/: Example.frag  Example.vert
doc/: OGLS-Core.html  OGLS-Engine-Bindings.html  OGLS-Engine-Callbacks.html  OGLS-Engine-Debug.html  OGLS-Engine-Math-Instances.html  OGLS-Engine-Math-Matrix.html  OGLS-Engine-Math-Vectors.html  OGLS-Engine-Rendering-Display.html  OGLS-Engine-Rendering-Helpers.html  OGLS-Engine-Rendering-Models.html  OGLS-Engine-Rendering-Primitives.html  OGLS-Engine-Rendering-Shaders-GLSL.html  OGLS-Engine-Rendering-Shaders-Light.html  OGLS-Engine-Rendering-Shaders-Material.html  OGLS-Engine-Rendering-Skybox.html  OGLS-Engine-Rendering-Text.html  OGLS-Engine-Rendering-Textures.html  OGLS-Engine-Sound.html  doc-index.html  index.html  mini_OGLS-Core.html  mini_OGLS-Engine-Bindings.html  mini_OGLS-Engine-Callbacks.html  mini_OGLS-Engine-Debug.html  mini_OGLS-Engine-Math-Instances.html  mini_OGLS-Engine-Math-Matrix.html  mini_OGLS-Engine-Math-Vectors.html  mini_OGLS-Engine-Rendering-Display.html  mini_OGLS-Engine-Rendering-Helpers.html  mini_OGLS-Engine-Rendering-Models.html  mini_OGLS-Engine-Rendering-Primitives.html  mini_OGLS-Engine-Rendering-Shaders-GLSL.html  mini_OGLS-Engine-Rendering-Shaders-Light.html  mini_OGLS-Engine-Rendering-Shaders-Material.html  mini_OGLS-Engine-Rendering-Skybox.html  mini_OGLS-Engine-Rendering-Text.html  mini_OGLS-Engine-Rendering-Textures.html  mini_OGLS-Engine-Sound.html  ogls.haddock  ogls.txt
doc/src/: OGLS.Core.html  OGLS.Engine.Bindings.html  OGLS.Engine.Callbacks.html  OGLS.Engine.Debug.html  OGLS.Engine.Math.Instances.html  OGLS.Engine.Math.Matrix.html  OGLS.Engine.Math.Vectors.html  OGLS.Engine.Rendering.Display.html  OGLS.Engine.Rendering.Helpers.html  OGLS.Engine.Rendering.Models.html  OGLS.Engine.Rendering.Primitives.html  OGLS.Engine.Rendering.Shaders.GLSL.html  OGLS.Engine.Rendering.Shaders.Light.html  OGLS.Engine.Rendering.Shaders.Material.html  OGLS.Engine.Rendering.Skybox.html  OGLS.Engine.Rendering.Text.html  OGLS.Engine.Rendering.Textures.html  OGLS.Engine.Sound.html
src/OGLS/: Core.hs
src/OGLS/Engine/: Bindings.hs  Callbacks.hs  Debug.hs  Sound.hs
src/OGLS/Engine/Math/: Instances.hs  Matrix.hs  Vectors.hs
src/OGLS/Engine/Rendering/: Display.hs  Helpers.hs  Models.hs  Primitives.hs  Skybox.hs  Text.hs  Textures.hs
src/OGLS/Engine/Rendering/Shaders/: GLSL.hs  Light.hs  Material.hs
