name:                ogls
version:             0.0.1.1
synopsis:            GLUT 3D engine showcase prototype 
homepage:            https://github.com/awkure/ogls#readme
license:             MIT 
license-file:        LICENSE
author:              Adam
maintainer:          awkure@protonmail.ch
copyright:           2017 awkure 
category:            Graphics 
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 8.0.2
                   , GHC == 7.10.3
                   , GHC == 7.8.4 
cabal-version:       >=1.10

flag template-haskell
  default: True
  manual:  True

library
  hs-source-dirs:      src
  exposed-modules:     OGLS.Core
                     , OGLS.Engine.Sound
                     , OGLS.Engine.Debug
                     , OGLS.Engine.Bindings
                     , OGLS.Engine.Callbacks
                     , OGLS.Engine.Math.Matrix
                     , OGLS.Engine.Math.Vectors
                     , OGLS.Engine.Math.Instances
                     , OGLS.Engine.Rendering.Text
                     , OGLS.Engine.Rendering.Skybox
                     , OGLS.Engine.Rendering.Models
                     , OGLS.Engine.Rendering.Display
                     , OGLS.Engine.Rendering.Helpers
                     , OGLS.Engine.Rendering.Textures
                     , OGLS.Engine.Rendering.Primitives
                     , OGLS.Engine.Rendering.Shaders.GLSL 
                     , OGLS.Engine.Rendering.Shaders.Light
                     , OGLS.Engine.Rendering.Shaders.Material
  build-depends:       base                 == 4.*
                     , OpenGL               == 3.0.2.0
                     , GLUT                 == 2.7.0.12
                     , array                == 0.5.1.1
                     , bytestring           == 0.10.8.1
                     , cereal               == 0.5.4.0
                     , GLURaw               == 2.0.0.3
                     , GLUtil               == 0.9.1.1 
                     , GLFW-b               == 1.4.8.1
                     , random               == 1.1
                     , text                 == 1.2.2.1
                     , time                 == 1.6.0.1
                     --, FTGL               == 2.1
                     , stb-image            == 0.2.1
                     , bitmap               == 0.0.2 
                     , lens                 == 4.15.1
                     , fail                 == 4.9.0.0
                     , vector               == 0.11.0.0
                     , void                 == 0.7.2
                     , linear               == 1.20.6
                     , parallel             == 3.2.1.1
                     , mtl                  == 2.2.1
                     , transformers         == 0.5.2.0
                     , containers           == 0.5.7.1
                     , unordered-containers == 0.2.8.0
                     , hashable             == 1.2.6.0
                     , base-orphans         == 0.5.4
                     , algebra              == 4.3
                     , semigroupoids        == 5.1
                     , directory            == 1.3.0.0
                     , neat-interpolation   == 0.3.2.1
  
  if flag(template-haskell) && impl(ghc)
    build-depends:     template-haskell     == 2.11.1.0
  
  default-language:    Haskell2010

executable ogls-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wdeprecations 
  build-depends:       base         == 4.*
                     , ogls         == 0.0.1.*
                     , parallel     == 3.2.1.1
                     , random       == 1.1
                     , OpenGL       == 3.0.2.0
                     , GLFW-b       == 1.4.8.1
                     , GLUT         == 2.7.0.12
                     , mtl          == 2.2.1
                     , transformers == 0.5.2.0
  default-language:    Haskell2010

test-suite ogls-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ogls
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/awkure/ogls
